--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,19 @@
+:root {
+  --background: #d4d4d4;
+  --primary: #f9585d;
+  --primary-light: #734848;
+  --box-fill: #ffffff;
+  --box-fill-2: #e8e8e8;
+}
+
+[theme="dark"] {
+  --background: #121212;
+  --primary: #f9585d;
+  --primary-light: #734848;
+  --box-fill: #212121;
+  --box-fill-2: #3e3e3e;
+}
+
 html,
 body {
   position: relative;
